Trying to fix an overflow issue

--- a/src/css/top.css
+++ b/src/css/top.css
@@ -523,7 +523,9 @@ nav {
 }
 
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
-
+  .top {
+    overflow-y: hidden;
+  }
   .top > header img {
     width: 59px;
     height: 43px;
